k8s/homelab/core/longhorn/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
spec:
  parentRefs:
    - namespace: envoy-gateway-system
      name: gateway-local
    - namespace: envoy-gateway-system
      name: gateway-tailscale
  hostnames:
    - longhorn.hs.liquid.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          namespace: longhorn-system
          name: longhorn-frontend
          port: 80
